--- a/content/chapter_14_jlite.ipynb
+++ b/content/chapter_14_jlite.ipynb
@@ -1691,7 +1691,7 @@
     }
    ],
    "source": [
-    "val = rng.uniform( size=1_000_000 )\n",
+    "val = rng.uniform( size=100_000 )\n",
     "\n",
     "plt.hist(val, bins=50,\n",
     "         color=\"black\",\n",
@@ -3134,7 +3134,7 @@
    },
    "outputs": [],
    "source": [
-    "def create_samples(n=30, N=1_000_000, su=2, seed=None):\n",
+    "def create_samples(n=30, N=100_000, su=2, seed=None):\n",
     "    \"\"\"\n",
     "    引数：\n",
     "        n：標本の大きさ\n",
