--- a/content/exercises_ch14_jlite.ipynb
+++ b/content/exercises_ch14_jlite.ipynb
@@ -354,7 +354,7 @@
    },
    "outputs": [],
    "source": [
-    "def clt(n=1000, N=1_000_000, seed=None):\n",
+    "def clt(n=1000, N=100_000, seed=None):\n",
     "\n",
     "    np.random.default_rng(seed)\n",
     "    coins = rng.integers(0, 2, size=(n,N))\n",
@@ -833,7 +833,7 @@
    },
    "outputs": [],
    "source": [
-    "n = 1_000_000\n",
+    "n = 100_000\n",
     "coins = rng.integers(0, 2, size=n)            # 0または1をN個生成\n",
     "cumulative_sum = np.cumsum(coins)             # coinsの累積和を計算\n",
     "avr_arr = cumulative_sum / np.arange(1, n+1)  # 各回の試行での平均を計算"
@@ -938,7 +938,7 @@
     }
    ],
    "source": [
-    "def lln(n=1_000_000, m=10_000, seed=None):\n",
+    "def lln(n=100_000, m=10_000, seed=None):\n",
     "\n",
     "    if n-m >= 2:\n",
     "\n",
