--- a/content/exercises_ch14_jlite.ipynb
+++ b/content/exercises_ch14_jlite.ipynb
@@ -356,7 +356,7 @@
    "source": [
     "def clt(n=1000, N=100_000, seed=None):\n",
     "\n",
-    "    np.random.default_rng(seed)\n",
+    "    rng = np.random.default_rng(seed)\n",
     "    coins = rng.integers(0, 2, size=(n,N))\n",
     "    avr = coins.mean(axis=0)\n",
     "    s_avr = ( avr - 0.5 ) / (0.5/n**0.5)\n",
